fixed font being too big for expertise section

--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,17 @@ p {
         font-size: 16px;
     }
 }
+@media (max-width: 2000px) {
+    p {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 1500px) {
+    p {
+        font-size: 14px;
+    }
+}
 
 *::-webkit-scrollbar {
     width: 0px;
